--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Days Counter</h1>
-        <p>Counting the number of days since January 1, 2000:</p>
+        <h1>Relationship Streak</h1>
+        <p>Counting the number of days since July 9, 2021</p>
         <div class="count" id="count"></div>
     </div>
 
     <script>
         // Function to calculate the number of days since January 1, 2000
         function calculateDays() {
-            var startDate = new Date('2000-01-01');
+            var startDate = new Date('2021-07-09');
             var currentDate = new Date();
             var timeDiff = Math.abs(currentDate.getTime() - startDate.getTime());
             var days = Math.ceil(timeDiff / (1000 * 3600 * 24));
